[project]
name = "PyPiperTTS"
version = "0.0.1"
authors = [
  { name="broadfield-dev" },
]
description = "Python wrapper for PiperTTS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[dependencies]
piper-tts

[project.urls]
Homepage = "https://github.com/broadfield-dev/PyPiperTTS"
Issues = "https://github.com/broadfield-dev/PyPiperTTS/issues"
